--- a/src/app/product-ratings/review-form/review-form.component.scss
+++ b/src/app/product-ratings/review-form/review-form.component.scss
@@ -67,13 +67,15 @@
         width: 100%;
         padding: 0.4rem 0.7rem;
         font-size: 0.8rem;
-        border: thin solid #f7f9fd;
+        border: thin solid #e9ebf1;
         border-radius: 4px;
-        background-color: #f7f9fd;
-        transition: border-color 0.3s ease;
+        background-color: #e9ebf1;
+        transition: background-color .4s ease,
+        border-color .4s ease;
         
         &:focus {
           border-color: #F72551;
+          background-color: #f7f9fd;
         }
       }
 
@@ -105,11 +107,11 @@
 
     .error-feedback {
       margin-top: 2rem;
-      animation: reveal .3s ease;
+      animation: reveal .4s ease;
       
       p {
         color: #963249;
-        font-weight: 500;
+        font-weight: 400;
         text-align: center;
         line-height: 1.7rem;
       }
