--- a/src/app/product-ratings/review-form/review-form.component.scss
+++ b/src/app/product-ratings/review-form/review-form.component.scss
@@ -2,12 +2,18 @@
   position: relative;
   width: 100%;
   height: calc(100% - 87.19px);
-  padding: 0 5rem 5rem;
   overflow: hidden;
-  overflow-y: auto;
 
   &.review-submitted {
     overflow: hidden;
+  }
+
+  .scrollable-area {
+    width: 100%;
+    height: 100%;
+    padding: 0 5rem 5rem;
+    overflow: hidden;
+    overflow-y: auto;
   }
 
   .product-details {
