--- a/src/app/product-ratings/review-form/review-form.component.scss
+++ b/src/app/product-ratings/review-form/review-form.component.scss
@@ -164,3 +164,33 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .container {
+    .scrollable-area {
+      padding: 0 3rem 3rem;
+    }
+
+    .product-details {  
+      .product-image {
+        width: 250px;
+        height: 250px;
+      }
+    }
+    
+    #review-form {
+      .form-group {
+        .submit-btn {
+          width: 100%;
+          height: 36px;
+        }
+      }
+    }
+
+    .success-msg {
+      h3 {
+        font-size: 1rem;
+      }
+    }
+  }
+}
