--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -26,16 +26,16 @@
     width: 100%;
     padding: 1.5rem;
 
-    &::before {
-      content: '';
-      position: absolute;
-      left: 0;
-      bottom: -1rem;
-      width: 100%;
-      height: 1rem;
-      background: linear-gradient(#fff, transparent);
-      z-index: 1;
-    }
+    // &::before {
+    //   content: '';
+    //   position: absolute;
+    //   left: 0;
+    //   bottom: -1rem;
+    //   width: 100%;
+    //   height: 1rem;
+    //   background: linear-gradient(#fff, transparent);
+    //   z-index: 1;
+    // }
   
     .close-btn {
       margin-left: auto;
