--- a/src/app/product-ratings/review-form/review-form.component.html
+++ b/src/app/product-ratings/review-form/review-form.component.html
@@ -7,13 +7,17 @@
     class="container" 
     [class.review-submitted]="reviewSubmitted">
 
-    <div class="scrollable-area">
-      <div *ngIf="product" class="product-details">
+    <div *ngIf="!isLoading" class="scrollable-area">
+      <div class="product-details">
         <div class="product-image">
           <img image-loader [src]="product?.images[0]" [alt]="product.productName">    
         </div>
   
         <h3 class="product-name">{{ product.productName }}</h3>
+      </div>
+
+      <div *ngIf="userReviewExists" class="error-feedback">
+        <p>You already reviewed this item</p>
       </div>
       
       <form 
@@ -24,28 +28,28 @@
           <label>Overall rating</label>
           <star-rating 
             [newRating]="true"
+            [readonly]="userReviewExists"
             [overall]="rating"
             (selectedRating)="onRatingSelection($event)"></star-rating>
         </div>
         
         <div class="form-group">
           <label>Add a headline</label>
-          <input formControlName="headline" type="text">
+          <input formControlName="headline" 
+           >
         </div>
   
         <div class="form-group">
           <label>Wire your review</label>
-          <textarea formControlName="review" rows="7"></textarea>
+          <textarea formControlName="review" 
+           
+            rows="7"></textarea>
         </div>
   
         <div class="form-group">
           <button 
             [disabled]="reviewForm.invalid || userReviewExists"
             class="submit-btn">Submit</button>
-        </div>
-  
-        <div *ngIf="userReviewExists" class="error-feedback">
-          <p>You already reviewed this item</p>
         </div>
       </form>
     </div>
