--- a/src/app/product-ratings/review-form/review-form.component.html
+++ b/src/app/product-ratings/review-form/review-form.component.html
@@ -3,9 +3,7 @@
   [height]="'90vh'"
   [showModal]="showForm" 
   (showModal)="onClose()">
-  <div *ngIf="showForm"
-    class="container" 
-    [class.review-submitted]="reviewSubmitted">
+  <div class="container" [class.review-submitted]="reviewSubmitted">
 
     <div *ngIf="!isLoading && !reviewSubmitted" class="scrollable-area">
       <div class="product-details">
