--- a/src/app/shared/aside-panel/aside-panel.component.scss
+++ b/src/app/shared/aside-panel/aside-panel.component.scss
@@ -15,23 +15,17 @@
   }
 
   .top {
-    position: relative;
+    position: absolute;
+    left: 0;
+    top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     padding: 1.5rem;
-
-    &::before {
-      content: '';
-      position: absolute;
-      left: 0;
-      bottom: -1rem;
-      width: 100%;
-      height: 1rem;
-      background: linear-gradient(#fff, transparent);
-      z-index: 1;
-    }
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: saturate(180%) blur(20px);
+    z-index: 10;
 
     .close-btn {
       margin-left: auto;
