--- a/src/app/product-ratings/product-ratings.component.scss
+++ b/src/app/product-ratings/product-ratings.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  padding: 1rem 3rem 7rem;
+  padding: 87.19px 3rem 3rem;
   overflow: hidden;
   overflow-y: auto;
   scrollbar-width: none;
