--- a/src/app/product-ratings/review-form/review-form.component.scss
+++ b/src/app/product-ratings/review-form/review-form.component.scss
@@ -1,7 +1,7 @@
 .container {
   position: relative;
   width: 100%;
-  height: calc(100% - 87.19px);
+  height: 100%;
   overflow: hidden;
 
   &.review-submitted {
@@ -11,9 +11,15 @@
   .scrollable-area {
     width: 100%;
     height: 100%;
-    padding: 0 5rem 5rem;
+    padding: 87.19px 5rem 5rem;
     overflow: hidden;
     overflow-y: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   .product-details {
