--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -5,38 +5,27 @@
 }
 
 .modal {
-  left: 50%;
-  top: 50%;
+  position: relative;
   width: auto;
   height: auto;
   background-color: #fff;
   transition: width .3s ease, height .3s ease;
   animation: zoomIn .2s ease;
   overflow: hidden;
-
-  &.zoom-out {
-    animation: zoomOut .2s ease forwards;
-  }
-
+  
   .top {
-    position: relative;
+    position: absolute;
+    left: 0;
+    top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     padding: 1.5rem;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: saturate(180%) blur(20px);
+    z-index: 10;
 
-    // &::before {
-    //   content: '';
-    //   position: absolute;
-    //   left: 0;
-    //   bottom: -1rem;
-    //   width: 100%;
-    //   height: 1rem;
-    //   background: linear-gradient(#fff, transparent);
-    //   z-index: 1;
-    // }
-  
     .close-btn {
       margin-left: auto;
       padding: 0.6rem;
