--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -27,7 +27,7 @@
     position: relative;
     width: 100%;
     height: inherit;
-    padding: calc(87.19px + 1rem) 0 1rem;
+    padding: 87.19px 0 1rem;
     overflow: hidden;
     overflow-y: auto;
     scrollbar-width: none;
