--- a/src/app/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product-details/slider/lightbox/lightbox.component.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: calc(100% - 87.19px);
+  height: 100%;
+  padding-top: 87.19px;
 
   .top-content {
     position: relative;
