--- a/src/app/page-not-found/page-not-found.component.scss
+++ b/src/app/page-not-found/page-not-found.component.scss
@@ -3,4 +3,81 @@
   height: 100vh;
   padding: 70px 1rem 0;
   animation: reveal .4s ease;
+
+  form {
+    width: 400px;
+    min-height: 400px;
+    margin: 4rem auto;
+    padding: 5rem 4rem;
+    animation: reveal .4s ease;
+    background-color: #fff;
+    
+    .form-group {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      justify-content: space-between;
+
+      &:not(:last-of-type) {
+        margin-bottom: 1.5rem;
+      }
+
+      label {
+        margin-bottom: 0.5rem;
+      } 
+
+      input, textarea, select {
+        width: 100%;
+        padding: 0.4rem 0.7rem;
+        font-size: 0.8rem;
+        text-align: center;
+        border: thin solid #e9ebf1;
+        border-radius: 4px;
+        background-color: #e9ebf1;
+        transition: background-color .4s ease,
+        border-color .4s ease;
+        
+        &:focus {
+          border-color: #F72551;
+          background-color: #f7f9fd;
+        }
+
+        &:read-only {
+          pointer-events: none;
+          cursor: default;
+        }
+      }
+
+      star-rating {
+        &.read-only {
+          pointer-events: none;
+        }
+      }
+
+      button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 190px;
+        height: 50px;
+        margin: auto;
+        color: #fff;
+        font-size: .85rem;
+        border: 1px solid #F72551;
+        border-radius: 40px;
+        background-color: #F72551;
+        transition: opacity .4s ease,
+        background-color .4s ease;
+
+        &:disabled {
+          opacity: 0.6 !important;
+          cursor: default;
+        }
+
+        &:not(:disabled):hover {
+          background-color: darken(#F72551, 5); 
+        }
+      }
+    }
+  }
 }
