--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav *ngIf="!hideNavbar" class="navbar">
+<nav class="navbar">
   <div class="wrapper-l navbar-wrapper">
     <a routerLink="/" class="logo">
       <span>A</span>
