--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -1,7 +1,22 @@
 <section class="login-section">
-  <div class="wrapper">
-
-    <h1>Login!</h1>
+  <div class="quick-store-info-column">
 
   </div>
+
+  <form [formGroup]="loginForm" id="loginForm">
+    <div class="form-group">
+      <label>Username</label>
+      <input formControlName="username" type="text">
+    </div>
+
+    <div class="form-group">
+      <label>Password</label>
+      <input formControlName="password" type="password">
+    </div>
+
+    <div class="form-group">
+      <button class="btn-xl-filled login-btn">Log In</button>
+      <button class="btn-xl signup-btn">Create Account</button>
+    </div>
+  </form>
 </section>
