--- a/src/app/user/login-page/login-page.component.scss
+++ b/src/app/user/login-page/login-page.component.scss
@@ -1,11 +1,19 @@
 .login-section {
+  display: flex;
   width: 100%;
-  min-height: 100%;
-  padding: 70px 1rem 0;
+  height: 100vh;
   animation: reveal .4s ease;
 
+  .quick-store-info-column {
+    width: 40%;
+    height: 100%;
+    background-color: #F72551;
+  }
+
   #loginForm {
-    
+    flex: 1;
+    height: 100%;
+    background-color: #fff;
     
     .form-group {
       display: flex;
@@ -21,58 +29,39 @@
         margin-bottom: 0.5rem;
       } 
 
-      input, textarea, select {
+      input {
         width: 100%;
         padding: 0.4rem 0.7rem;
         font-size: 0.8rem;
         text-align: center;
         border: thin solid #e9ebf1;
-        border-radius: 4px;
-        background-color: #e9ebf1;
         transition: background-color .4s ease,
         border-color .4s ease;
         
         &:focus {
-          border-color: #F72551;
-          background-color: #f7f9fd;
-        }
-
-        &:read-only {
-          pointer-events: none;
-          cursor: default;
+          
         }
       }
 
-      star-rating {
-        &.read-only {
-          pointer-events: none;
-        }
+      .login-btn,
+      .signup-btn {
+
       }
+    }
+  }
+}
 
-      .submit-btn {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 190px;
-        height: 50px;
-        margin: auto;
-        color: #fff;
-        font-size: .85rem;
-        border: 1px solid #F72551;
-        border-radius: 40px;
-        background-color: #F72551;
-        transition: opacity .4s ease,
-        background-color .4s ease;
+@media (max-width: 600px) {
+  .login-section {
+    flex-direction: column;
 
-        &:disabled {
-          opacity: 0.6 !important;
-          cursor: default;
-        }
+    .quick-store-info-column,
+    #loginForm {
+      width: 100%;
+    }
 
-        &:not(:disabled):hover {
-          background-color: darken(#F72551, 5); 
-        }
-      }
+    .quick-store-info-column {
+      height: 250px;
     }
   }
 }
