--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -3,20 +3,22 @@
 
   </div>
 
-  <form [formGroup]="loginForm" id="loginForm">
-    <div class="form-group">
-      <label>Username</label>
-      <input formControlName="username" type="text">
-    </div>
-
-    <div class="form-group">
-      <label>Password</label>
-      <input formControlName="password" type="password">
-    </div>
-
-    <div class="form-group">
-      <button class="btn-xl-filled login-btn">Log In</button>
-      <button class="btn-xl signup-btn">Create Account</button>
-    </div>
-  </form>
+  <div class="login-form-column">
+    <form [formGroup]="loginForm" id="loginForm">
+      <div class="form-group">
+        <label>Username</label>
+        <input formControlName="username" type="text">
+      </div>
+  
+      <div class="form-group">
+        <label>Password</label>
+        <input formControlName="password" type="password">
+      </div>
+  
+      <div class="form-group">
+        <button class="btn-xl-filled login-btn">Log In</button>
+        <button class="btn-xl signup-btn">Create Account</button>
+      </div>
+    </form>
+  </div>
 </section>
