--- a/src/app/user/login-page/login-page.component.scss
+++ b/src/app/user/login-page/login-page.component.scss
@@ -2,7 +2,13 @@
   display: flex;
   width: 100%;
   height: 100vh;
+  background-color: #fff;
   animation: reveal .4s ease;
+
+  .quick-store-info-column,
+  .login-form-column {
+    padding: 5rem;
+  }
 
   .quick-store-info-column {
     width: 40%;
@@ -10,53 +16,62 @@
     background-color: #F72551;
   }
 
-  #loginForm {
+  .login-form-column {
     flex: 1;
+    display: flex;
+    align-items: center;
     height: 100%;
-    background-color: #fff;
     
-    .form-group {
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      justify-content: space-between;
-
-      &:not(:last-of-type) {
-        margin-bottom: 1.5rem;
-      }
-
-      label {
-        margin-bottom: 0.5rem;
-      } 
-
-      input {
-        width: 100%;
-        padding: 0.4rem 0.7rem;
-        font-size: 0.8rem;
-        text-align: center;
-        border: thin solid #e9ebf1;
-        transition: background-color .4s ease,
-        border-color .4s ease;
-        
-        &:focus {
+    #loginForm {
+      width: 350px;
+    
+      .form-group {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+  
+        &:not(:last-of-type) {
+          margin-bottom: 1.5rem;
+        }
+  
+        label {
+          margin-bottom: 0.5rem;
+        } 
+  
+        input {
+          width: 100%;
+          padding: 0.4rem 0.7rem;
+          font-size: 0.8rem;
+          text-align: center;
+          border-bottom: thin solid #e9ebf1;
+          transition: background-color .4s ease,
+          border-color .4s ease;
           
+          &:focus {
+            
+          }
+        }
+  
+        .login-btn,
+        .signup-btn {
+          width: 100%;
+        }
+
+        .login-btn {
+          margin-bottom: 1rem;
         }
       }
-
-      .login-btn,
-      .signup-btn {
-
-      }
     }
-  }
+  } 
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   .login-section {
     flex-direction: column;
 
     .quick-store-info-column,
-    #loginForm {
+    .login-form-column {
       width: 100%;
     }
 
