--- a/src/app/product-details/slider/slider.component.html
+++ b/src/app/product-details/slider/slider.component.html
@@ -17,7 +17,7 @@
   
     <button 
       *ngIf="altImages?.length <= 4 && images.length > altImages?.length"
-      (click)="altImages = images" class="show-more-btn">
+      (click)="altImages = images" class="btn-xl show-more-btn">
       <i class="material-icons">photo_camera</i>
       <span>Show More Images</span>
     </button>
