--- a/src/app/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product-details/variant-section/variant-section.component.scss
@@ -38,7 +38,7 @@
         padding: 0.2rem 0.7rem;
         white-space: nowrap;
         text-overflow: ellipsis;
-        border: 1px solid #e7edff;
+        border: 1px solid #e6e9f0;
         border-radius: 4px;
         transition: border-color .4s ease,
         opacity .4s ease, 
