--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -25,7 +25,7 @@
   
       <div class="action-buttons">
         <button class="btn-xl-filled login-btn">Log In</button>
-        <button class="btn-xl signup-btn">Create Account</button>
+        <button routerLink="../signup" class="btn-xl signup-btn">Create Account</button>
       </div>
     </form>
   </div>
