--- a/src/app/user/login-page/login-page.component.scss
+++ b/src/app/user/login-page/login-page.component.scss
@@ -5,14 +5,10 @@
   background-color: #fff;
   animation: reveal .4s ease;
 
-  .quick-store-info-column,
-  .login-form-column {
-    padding: 5rem;
-  }
-
   .quick-store-info-column {
     width: 40%;
     height: 100%;
+    padding: 5rem;
     background-color: #F72551;
   }
 
@@ -21,6 +17,7 @@
     display: flex;
     align-items: center;
     height: 100%;
+    padding: 4rem;
     
     #loginForm {
       width: 400px;
@@ -30,6 +27,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        padding: 20px 0 0;
         // background-color: #aaa;
   
         &:not(:last-of-type) {
@@ -39,31 +37,32 @@
         label {
           position: absolute;
           left: 0;
-          // font-size: 1rem;
+          bottom: 0.5rem;
           user-select: none;
           transition: all;
         } 
   
         input {
           width: 100%;
-          padding: 0.4rem 0.7rem;
+          padding: 0.25rem 0;
           font-size: 0.8rem;
-          text-align: center;
+          // text-align: center;
           border-bottom: thin solid #c7cad8;
           transition: background-color .4s ease,
           border-color .4s ease;
           
-          &:focus {
+          &:focus + label,
+          &:valid + label {
             
           }
         }
 
         .toggle_password_visibility {
           position: absolute;
-          top: 0;
+          top: 20px;
           right: 0;
           width: 50px;
-          height: calc(100% - 2px);
+          height: calc(100% - 22px);
           background: linear-gradient(90deg, transparent, #fff 40%);
           z-index: 5;
 
@@ -71,15 +70,12 @@
             margin-left: auto;
             font-size: 1.3rem;
           }
-        }
-  
-        
+        }        
       }
 
       .action-buttons {
         width: 100%;
-        margin-top: 2rem;
-
+        margin-top: 3rem;
 
         .login-btn,
         .signup-btn {
