--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -4,16 +4,19 @@
   </div>
 
   <div class="login-form-column">
-    <form [formGroup]="loginForm" id="loginForm">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" id="loginForm">
       <div class="form-group">
         <input formControlName="username" type="text">
-        <label>Username or email address</label>
+        <label [class.shrink]="username.valid">
+          Username or email address
+        </label>
       </div>
   
       <div class="form-group">
         <input formControlName="password" 
           [type]="!showPassword ? 'password' : 'text'">
-        <label>Password</label>
+        <label [class.shrink]="password.valid">Password</label>
+
         <button 
           (click)="showPassword = !showPassword"
           class="toggle_password_visibility"
@@ -25,7 +28,9 @@
   
       <div class="action-buttons">
         <button class="btn-xl-filled login-btn">Log In</button>
-        <button routerLink="../signup" class="btn-xl signup-btn">Create Account</button>
+        <button 
+          routerLink="../signup" 
+          class="btn-xl signup-btn">Create Account</button>
       </div>
     </form>
   </div>
