--- a/src/app/user/login-page/login-page.component.scss
+++ b/src/app/user/login-page/login-page.component.scss
@@ -27,42 +27,52 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        padding: 20px 0 0;
+        padding: 1rem 0 0;
         // background-color: #aaa;
   
         &:not(:last-of-type) {
           margin-bottom: 1.5rem;
         }
-  
-        label {
-          position: absolute;
-          left: 0;
-          bottom: 0.5rem;
-          user-select: none;
-          transition: all;
-        } 
-  
+
         input {
+          position: relative;
           width: 100%;
-          padding: 0.25rem 0;
-          font-size: 0.8rem;
-          // text-align: center;
+          padding: 0.5rem 0;
           border-bottom: thin solid #c7cad8;
           transition: background-color .4s ease,
           border-color .4s ease;
+          z-index: 1;
           
-          &:focus + label,
-          &:valid + label {
-            
+          &:focus {
+            border-color: #2587f7;
+
+            & + label {
+              top: 0;
+              font-size: 0.75rem;
+            }
           }
         }
 
+        label {
+          position: absolute;
+          left: 0;
+          top: calc(100% - 0.9rem - 1px - 0.5rem);
+          font-size: 0.9rem;
+          transition: 0.2s ease;
+          user-select: none;
+
+          &.shrink {
+            top: 0;
+            font-size: 0.75rem;
+          }
+        } 
+
         .toggle_password_visibility {
           position: absolute;
-          top: 20px;
+          top: 1rem;
           right: 0;
           width: 50px;
-          height: calc(100% - 22px);
+          height: calc(100% - 17px);
           background: linear-gradient(90deg, transparent, #fff 40%);
           z-index: 5;
 
