--- a/src/styles.scss
+++ b/src/styles.scss
@@ -109,6 +109,7 @@ img {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.1);
+    z-index: 1;
   }
 
   .banner-text {
@@ -185,6 +186,7 @@ img {
   background-color: #F72551;
 
   &:not(:disabled):hover {
+    border: 1px solid #F72551 !important;
     background-color: darken(#F72551, 5) !important; 
   }
 }
