--- a/src/app/user/login-page/login-page.component.scss
+++ b/src/app/user/login-page/login-page.component.scss
@@ -20,7 +20,7 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.2);
+      background-color: rgba(0, 0, 0, 0.3);
     }
 
     &::after {
@@ -29,8 +29,8 @@
       left: 0;
       bottom: 0;
       width: 100%;
-      height: 400px;
-      background: linear-gradient(transparent, #F72551);
+      height: 30%;
+      background: linear-gradient(transparent, rgba(247, 37, 83, 0.6));
       z-index: 1;
     }
   }
