--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -1,10 +1,24 @@
 <section class="login-section">
   <div class="quick-store-info-column">
+    <div class="top-content">
+      <button routerLink="/" class="return-btn" type="button">
+        <i class="material-icons">arrow_back_ios</i>
+      </button>
+
+      <a routerLink="/" class="logo">
+        <span>A</span>
+        <span>rmazon</span>
+      </a>
+    </div>
+
 
   </div>
 
   <div class="login-form-column">
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" id="loginForm">
+    <form 
+      [formGroup]="loginForm" 
+      (ngSubmit)="onSubmit()" 
+      id="loginForm">
       <div class="form-group">
         <input formControlName="username" type="text">
         <label [class.shrink]="username.valid">
