--- a/src/app/user/login-page/login-page.component.scss
+++ b/src/app/user/login-page/login-page.component.scss
@@ -9,7 +9,7 @@
     position: relative;
     width: 40%;
     height: 100%;
-    padding: 5rem;
+    padding: 3rem;
     background: #F72551 url('../../../assets/img/login-form.webp') 
     center center/cover no-repeat;
 
@@ -33,6 +33,44 @@
       background: linear-gradient(transparent, rgba(247, 37, 83, 0.6));
       z-index: 1;
     }
+
+    .top-content {
+      position: relative;
+      display: flex;
+      align-items: center;
+      width: 100%;
+      z-index: 1;
+     
+      .return-btn {
+
+
+        .material-icons {
+          color: #fff;
+        }
+      }
+      
+      .logo {
+        display: flex;
+        align-items: center;
+        user-select: none;
+        overflow: hidden;
+    
+        span:first-of-type {
+          margin-right: 0.5rem;
+          color: #e6e9f0;
+          font-size: 2rem;
+          font-weight: 300;
+          border-radius: 100px;
+        }
+    
+        span:last-of-type {
+          color: #e6e9f0;
+          padding: 0.1rem 0.7rem;
+          font-size: 1rem;
+          border-left: thin solid #fff;
+        }
+      }
+    }
   }
 
   .login-form-column {
@@ -51,7 +89,6 @@
         flex-direction: column;
         justify-content: space-between;
         padding: 1rem 0 0;
-        // background-color: #aaa;
   
         &:not(:last-of-type) {
           margin-bottom: 1.5rem;
