--- a/src/app/user/login-page/login-page.component.scss
+++ b/src/app/user/login-page/login-page.component.scss
@@ -30,7 +30,7 @@
       bottom: 0;
       width: 100%;
       height: 30%;
-      background: linear-gradient(transparent, rgba(247, 37, 83, 0.6));
+      background: linear-gradient(transparent, rgba(247, 37, 83, 0.4));
       z-index: 1;
     }
 
@@ -42,16 +42,24 @@
       z-index: 1;
      
       .return-btn {
-
+        padding: 0.6rem;
+        border-radius: 40px;
+        transition: background-color .4s ease;
 
         .material-icons {
           color: #fff;
+          font-size: 1.4rem;
+        }
+
+        &:hover {
+          background-color: rgba(255, 255, 255, 0.2);
         }
       }
       
       .logo {
         display: flex;
         align-items: center;
+        margin: auto;
         user-select: none;
         overflow: hidden;
     
