--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -2,7 +2,7 @@
   <div class="quick-store-info-column">
     <div class="top-content">
       <button routerLink="/" class="return-btn" type="button">
-        <i class="material-icons">arrow_back_ios</i>
+        <i class="material-icons">navigate_before</i>
       </button>
 
       <a routerLink="/" class="logo">
@@ -11,7 +11,9 @@
       </a>
     </div>
 
+    <div class="bottom-content">
 
+    </div>
   </div>
 
   <div class="login-form-column">
