--- a/src/app/user/login-page/login-page.component.scss
+++ b/src/app/user/login-page/login-page.component.scss
@@ -4,12 +4,15 @@
   height: 100vh;
   background-color: #fff;
   animation: reveal .4s ease;
+  transition: height .3s ease;
 
   .quick-store-info-column {
+    display: flex;
+    flex-direction: column;
     position: relative;
     width: 40%;
     height: 100%;
-    padding: 3rem;
+    padding: 2.5rem;
     background: #F72551 url('../../../assets/img/login-form.webp') 
     center center/cover no-repeat;
 
@@ -43,12 +46,12 @@
      
       .return-btn {
         padding: 0.6rem;
-        border-radius: 40px;
+        border-radius: 45px;
         transition: background-color .4s ease;
 
         .material-icons {
           color: #fff;
-          font-size: 1.4rem;
+          font-size: 2rem;
         }
 
         &:hover {
@@ -60,6 +63,7 @@
         display: flex;
         align-items: center;
         margin: auto;
+        text-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
         user-select: none;
         overflow: hidden;
     
@@ -82,7 +86,7 @@
   }
 
   .login-form-column {
-    flex: 1;
+    width: 60%;
     display: flex;
     align-items: center;
     height: 100%;
@@ -171,7 +175,7 @@
 @media (max-width: 768px) {
   .login-section {
     flex-direction: column;
-
+    
     .quick-store-info-column,
     .login-form-column,
     .login-form-column #loginForm {
@@ -179,7 +183,12 @@
     }
 
     .quick-store-info-column {
-      height: 250px;
+      height: 400px;
+      padding: 1.5rem;
+    }
+
+    .login-form-column {
+      padding: 2.5rem;
     }
   }
 }
