--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -1,11 +1,15 @@
 <section class="login-section">
   <div class="quick-store-info-column">
+    <div class="cover-image">
+      <img image-loader src="assets/img/login-form.webp" draggable="false">
+    </div>
+
     <div class="top-content">
       <button routerLink="/" class="return-btn" type="button">
         <i class="material-icons">navigate_before</i>
       </button>
 
-      <a routerLink="/" class="logo">
+      <a class="logo">
         <span>A</span>
         <span>rmazon</span>
       </a>
