--- a/src/app/user/login-page/login-page.component.scss
+++ b/src/app/user/login-page/login-page.component.scss
@@ -13,8 +13,23 @@
     width: 40%;
     height: 100%;
     padding: 2.5rem;
-    background: #F72551 url('../../../assets/img/login-form.webp') 
-    center center/cover no-repeat;
+
+    .cover-image {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+      user-select: none;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center center;
+      }
+    }
 
     &::before {
       content: '';
@@ -24,6 +39,7 @@
       width: 100%;
       height: 100%;
       background-color: rgba(0, 0, 0, 0.3);
+      z-index: 1;
     }
 
     &::after {
@@ -34,7 +50,7 @@
       width: 100%;
       height: 30%;
       background: linear-gradient(transparent, rgba(247, 37, 83, 0.4));
-      z-index: 1;
+      z-index: 2;
     }
 
     .top-content {
@@ -94,6 +110,7 @@
     
     #loginForm {
       width: 400px;
+      height: auto;
     
       .form-group {
         position: relative;
