--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -16,7 +16,8 @@
     </div>
 
     <div class="bottom-content">
-
+      <p>Armazon.do - <a href="#">Cookie Policy</a> and <a href="#">Privacy Policy</a></p>
+      <p>&copy; Armazon by Adison P. Martínez 2020-{{ currentYear }}</p>
     </div>
   </div>
 
