--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -15,6 +15,10 @@
       </a>
     </div>
 
+    <div class="middle-content">
+      <h3>Log in to your Armazon account</h3>
+    </div>
+
     <div class="bottom-content">
       <p>Armazon.do - <a href="#">Cookie Policy</a> and <a href="#">Privacy Policy</a></p>
       <p>&copy; Armazon by Adison P. Martínez 2020-{{ currentYear }}</p>
