--- a/src/app/product-ratings/review-form/review-form.component.html
+++ b/src/app/product-ratings/review-form/review-form.component.html
@@ -43,7 +43,7 @@
         <div class="form-group">
           <button 
             [disabled]="reviewForm.invalid || userReviewExists"
-            class="btn-xl-filled submit-btn">Submit</button>
+            class="btn-xl submit-btn">Submit</button>
         </div>
       </form>
     </div>
