--- a/src/styles.scss
+++ b/src/styles.scss
@@ -165,7 +165,7 @@ img {
   border: 1px solid lighten(#e6e9f0, 5); 
   background-color: lighten(#e6e9f0, 5);  
   transition: background-color .4s ease,
-  border-color .4s ease;
+  border-color .4s ease, opacity .4s ease;
   overflow: hidden;        
   
   &:disabled {
