--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -31,10 +31,12 @@
       (ngSubmit)="onSubmit()" 
       id="loginForm">
       <div class="form-group">
-        <input formControlName="username" type="text">
-        <label [class.shrink]="username.valid">
-          Username or email address
-        </label>
+        <div class="form-group-wrapper">
+          <input formControlName="username" type="text">
+          <label [class.shrink]="username.valid">
+            Username or email address
+          </label>
+        </div>
 
         <div class="invalid-feedback">
           <p>Enter your username or email</p>
@@ -42,21 +44,23 @@
       </div>
   
       <div class="form-group">
-        <input formControlName="password" 
-          [type]="!showPassword ? 'password' : 'text'">
-        <label [class.shrink]="password.valid">Password</label>
+        <div class="form-group-wrapper">
+          <input formControlName="password" 
+            [type]="!showPassword ? 'password' : 'text'">
+          <label [class.shrink]="password.valid">Password</label>
+
+          <button 
+            (click)="showPassword = !showPassword"
+            class="toggle_password_visibility"
+            type="button">
+            <i *ngIf="!showPassword" class="material-icons">visibility</i>
+            <i *ngIf="showPassword" class="material-icons">visibility_off</i>
+          </button>
+        </div>
 
         <div class="invalid-feedback">
           <p>Enter your password</p>
         </div>
-
-        <button 
-          (click)="showPassword = !showPassword"
-          class="toggle_password_visibility"
-          type="button">
-          <i *ngIf="!showPassword" class="material-icons">visibility</i>
-          <i *ngIf="showPassword" class="material-icons">visibility_off</i>
-        </button>
       </div>
   
       <div class="action-buttons">
