--- a/src/app/shared/spinner/spinner.component.scss
+++ b/src/app/shared/spinner/spinner.component.scss
@@ -16,7 +16,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(246, 247, 250, 0.5);
   animation: reveal 0.4s ease;
   z-index: 10;
 
@@ -34,7 +34,7 @@
     .inner-ring {
       width: inherit;
       height: inherit;
-      border: 4px solid #eee;
+      border: 4px solid #e6e9f0;
       border-radius: 60px;
     }
 
@@ -45,7 +45,7 @@
       width: inherit;
       height: inherit;
       border: 4px solid transparent;
-      border-color: transparent #ff9a9e #ff9a9e;
+      border-color: transparent lighten(#F72551, 10) lighten(#F72551, 10);
       border-radius: 60px;
     }   
   }
