--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -48,12 +48,6 @@
             Invalid username/email or password
           </p>
         </div>
-
-        <div *ngIf="invalidLogin" class="invalid-feedback">
-          <p>
-            Invalid username/email or password
-          </p>
-        </div>
       </div>
   
       <div class="form-group">
@@ -72,10 +66,18 @@
         </div>
 
         <div 
-          *ngIf="password.touched && password.invalid"
+          *ngIf="password.touched && password.invalid && !invalidLogin"
           class="invalid-feedback">
           <p *ngIf="password?.errors.required">
             Enter your password
+          </p>
+        </div>
+
+        <div 
+          *ngIf="username.dirty && invalidLogin" 
+          class="invalid-feedback">
+          <p>
+            Invalid username/email or password
           </p>
         </div>
       </div>
@@ -88,4 +90,6 @@
       </div>
     </form>
   </div>
+
+  <app-spinner [loading]="isLoading"></app-spinner>
 </section>
