--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -20,7 +20,10 @@
     </div>
 
     <div class="bottom-content">
-      <p>Armazon.do - <a href="#">Cookie Policy</a> and <a href="#">Privacy Policy</a></p>
+      <p>
+        Armazon.do - <a href="#">Cookie Policy</a> and 
+        <a href="#">Privacy Policy</a>
+      </p>
       <p>&copy; Armazon by Adison P. Martínez 2019-{{ currentYear }}</p>
     </div>
   </div>
@@ -76,9 +79,7 @@
         <div 
           *ngIf="username.dirty && invalidLogin" 
           class="invalid-feedback">
-          <p>
-            Invalid username/email or password
-          </p>
+          <p>Invalid username/email or password</p>
         </div>
       </div>
   
